Fix spacing issue

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -3893,7 +3893,7 @@ div.audio_player {
 #right_panel h3 {
   background: #468de5;
   margin-top: 0;
-  padding: 15px 0;
+  padding: 15px 10px;
   color: white;
   text-align: center;
   font-weight: 400; }
