--- a/app/static/sass/_right_panel.scss
+++ b/app/static/sass/_right_panel.scss
@@ -5,7 +5,7 @@
     h3 {
         background: lighten($blue, 5%);
         margin-top: 0;
-        padding: 15px 0;
+        padding: 15px 10px;
         color: white;
         text-align: center;
         font-weight: 400;
